Admin: fixed dropdowns z-index

--- a/admin/app/assets/stylesheets/spree/admin/global/_variables.scss
+++ b/admin/app/assets/stylesheets/spree/admin/global/_variables.scss
@@ -170,6 +170,7 @@ $dropdown-padding-y:    0.25rem !default;
 $dropdown-divider-bg: $gray-50 !default;
 $dropdown-divider-margin-y: 0.25rem !default;
 $dropdown-header-color: $gray-500 !default;
+$zindex-dropdown: 1050;
 
 $modal-backdrop-bg:                 $body-bg !default;
 $modal-backdrop-opacity:            0.8 !default;
